feat: update web search
